# mfile

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/mfile/: mfile.hpp
test/: CMakeLists.txt
test/source/: error_handling_test.cpp  file_positional_test.cpp  file_test.cpp  mfile_test.cpp
